--- a/templates/_menu.html
+++ b/templates/_menu.html
@@ -34,24 +34,18 @@
 
        <ul class="nav navbar-nav navbar-right">
           <!-- Search icon-->
-          <li>
-            <a href="views/cloud_add.html" class="navbar-brand">
-             <a href="#" data-toggle="Profile">
-                <em class="fa f"></em>
-             </a>
-          </li>
-          
-         <li class="dropdown" style="margin-right: 20px;">
+         
+         <li class="dropdown"  style="margin-right: 20px;">
             <a href="#" data-toggle="dropdown" data-play="fadeIn" class="dropdown-toggle">
-               <em class="fa fa-user"></em>
+               <em class="fa fa-user" style="margin-right: 10px;"></em><em class="fa fa-angle-down"></em>
             </a>
             <ul class="dropdown-menu">
-               <li><a class="router" href="pages/login.html">Login</a>
+               <li><a class="router" href="../pages/login.html">Login</a>
                </li>
-               <li><a class="router" href="views/setting.html">Settings</a>
+               <li><a class="router" href="../views/setting.html">Settings</a>
                </li>
             </ul>
-         </li>
+         </li> 
        </ul>
        
     </div>
