--- a/views/cloudadd.html
+++ b/views/cloudadd.html
@@ -22,10 +22,8 @@
    <div id="wrapper" class="wrapper">
       <section id="content-area">
          <div class="main-content" style="text-align: center;">
-            <h3>Page title (cloud_add)
-                <br>
-                <small>Subtitle</small>
-             </h3>
+
+             <small>cloud_add</small>
              <div class="row" style="text-align: center; padding-bottom: 50px;">
                  <div class="col-lg-12">
                     <h3>필요한 서비스를 선택해주세요</p>
