--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -22,10 +22,12 @@
    <div id="wrapper" class="wrapper">
       <section id="content-area">
          <div class="main-content">
-            <h3>DASHBOARD
-                <br>
-                <small>Subtitle</small>
-            </h3>
+            <div style="margin-bottom: 25px;">
+               <h3>DASHBOARD
+                 <br>
+                 <small>Server Status</small>
+               </h3>
+             </div>
          
             <div class="row">
                 <div class="panel-body">
@@ -46,12 +48,7 @@
                        </table>
                     </div>
                  </div>
-            </div>
-         
-            <div class="container">
-              <a href="cloudadd.html" class="mainbtn">add cloud</a>
-         
-            </div>
+               </div>
          
          
             <a href="cloudadd.html" class="mainbtn">add cloud</a>
