--- a/views/security_group.html
+++ b/views/security_group.html
@@ -18,43 +18,98 @@
 </head>
 
 <body>
+
    <!-- START Main wrapper-->
    <div id="wrapper" class="wrapper">
       <section id="content-area">
- 
          <div class="main-content">
-            <h3>security_group
-               <br>
-               <small>Bootstrap Responsive tables</small>
-            </h3>
-            
+            <div style="margin-bottom: 25px;">
+               <h3>SECURITY
+                 <br>
+                 <small>Security Group</small>
+               </h3>
+             </div>
             <div class="row">
                <div class="col-lg-12">
+                  <div class="panel-body">
+                     <div class="table-responsive">
+                        <table class="table table-hover">
+                           <thead>
+                              <tr>
+                                 <th>SecurityGroup Name</th>
+                                 <th>Group ID</th>
+                                 <th>Status</th>
+                              </tr>
+                           </thead>
+                           <tbody>
+                              
+                              <tr  style="font-weight:bolder;">
+                                 <td><a href="security_detail.html">Group 1</a></td>
+                                 <td>hj-23</td>
+                                 <td>None</td>
+                              </tr>
+                           </tbody>
+                        </table>
+                     </div>
+                  </div>
                   <div class="panel panel-default">
                      <div class="panel-body">
                         <div class="table-responsive">
                            <table class="table table-hover">
                               <thead>
-                                
                                  <tr>
+                                    <th></th>
                                     <th>SecurityGroup Name</th>
                                     <th>Group ID</th>
                                     <th>Status</th>
                                  </tr>
                               </thead>
                               <tbody>
-                                <tr  style="font-weight:lighter;">
+                                 
+                                 <tr  style="font-weight:bolder;">
+                                    <td>
+                                       <div class="checkbox c-checkbox">
+                                          <label>
+                                             <input type="checkbox">
+                                             <span class="fa fa-check"></span>
+                                          </label>
+                                       </div>
+                                    </td>
+                                    <td>
+                                       <div class="media">
+                                          <div class="media-body">
+                                             <div class="pull-center badge baed-info">TCP/Linux/4VCore</div>
+                                             <a href="security_detail.html">Group 1</a></div>
+                                       </div>
+                                    </td>
+                                    <td>hj-23</td>
+                                    <td>None</td>
+                                 </tr>
+                                 <tr  style="font-weight:bolder;">
+                                    <td>
+                                       <div class="checkbox c-checkbox">
+                                          <label>
+                                             <input type="checkbox">
+                                             <span class="fa fa-check"></span>
+                                          </label>
+                                       </div>
+                                    </td>
                                     <td><a href="security_detail.html">Group 1</a></td>
                                     <td>hj-23</td>
                                     <td>None</td>
-                                </tr>
+                                 </tr>
                               </tbody>
                            </table>
                         </div>
+
+
+
+
+
+
                      </div>
                   </div>
                </div>
-                
             </div>
          </div>
       </section> 
