support(게시판) 구현

--- a/templates/_left-side.html
+++ b/templates/_left-side.html
@@ -28,9 +28,11 @@
                   </a>
                </li>
                <li>
-                  
-               
-               
+                  <a href="support.html"  title="security_group" data-toggle="" class="no-submenu">
+                     <span class="item-text">support</span>
+                  </a>
+               </li>
+              
                 
              </ul>
              <!-- END SubMenu item-->
