--- a/templates/_menu.html
+++ b/templates/_menu.html
@@ -2,7 +2,7 @@
 <nav role="navigation" class="navbar navbar-default navbar-top navbar-fixed-top">
     <!-- START navbar header-->
     <div class="navbar-header">
-      <a href="pages/landing_ori.html" class="navbar-brand">
+      <a href="../pages/landing_ori.html" class="navbar-brand">
          <div class="brand-logo">
             <img src="/app/img/logo.png" alt="App Logo" class="img-responsive">
          </div>
