--- a/views/security_detail.html
+++ b/views/security_detail.html
@@ -57,18 +57,15 @@
                                        <div class="dropdown">
                                           <div class="input-group">
                                             <div class="input-group-btn">
-                                               <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">실행중
+                                               <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">작업
                                                   <span class="caret"></span>
                                                </button>
                                                <ul class="dropdown-menu pull-left">
-                                                   <li><a href="#">실행</a>
+                                                   <li><a href="#">작업</a>
                                                    </li>
                                                    <li><a href="security_edit.html">편집</a>
                                                    </li>
-                                                   
                                                    <li><a onclick="return confirm('정말로 삭제 할까요?')">삭제</a>
-                                                   </li>
-                                                   <li><a onclick="return confirm('정말로 재부팅 할까요?')">재부팅</a>
                                                    </li>
                                                </ul>
                                             </div>
