디자인 수정

--- a/views/supportDetail.html
+++ b/views/supportDetail.html
@@ -52,7 +52,7 @@
                 <hr> 
                 <fieldset>
                     <div class="form-group">
-                       <label for="input-id-1" class="col-sm-1 control-label">제목</label>
+                       <label for="input-id-1" class="col-sm-1 control-label" style="line-height: 35px;">제목</label>
                        <div class="col-sm-10">
                           <input id="input-id-1" type="text" class="form-control" value="서버 재부팅 에러 문제">
                        </div>
@@ -60,12 +60,12 @@
                  </fieldset>
                  <fieldset style="border-bottom: none;">
                     <div class="form-group">
-                       <label for="input-id-1" class="col-sm-1 control-label">글쓴이</label>
+                       <label for="input-id-1" class="col-sm-1 control-label" style="line-height: 35px;">글쓴이</label>
                        <div class="col-sm-3">
                           <input id="input-id-1" type="text" class="form-control" value="희주 ">
                        </div>
                        <div class="col-sm-3"></div>
-                       <label for="input-id-1" class="col-sm-1 control-label">비밀번호</label>
+                       <label for="input-id-1" class="col-sm-1 control-label" style="line-height: 35px;">비밀번호</label>
                        <div class="col-sm-3">
                           <input id="input-id-1" type="password" class="form-control" value="1234">
                        </div>
@@ -75,10 +75,7 @@
                  
                  <div class="cont">
                      <textarea placeholder="내용입력">
-도와주세요 ㅠㅠㅠㅠㅠ
-저는 왜이렇게 오래 걸리는 걸까요
-저희 관리자 페이지도 만들어야하는 건가요
-종강 언제하죠...?
+서포트 디테일 페이지
                      </textarea>
                  </div>
 
