--- a/views/priceview.html
+++ b/views/priceview.html
@@ -41,7 +41,7 @@
             <div class="col-xs-12" style="float: left; margin: 10px 0px;">
               <fieldset>
                 <div class="form-group">
-                   <label for="input-id-1" class="col-sm-1 control-label">현재잔액</label>
+                   <label for="input-id-1" class="col-sm-1 control-label" style="line-height: 35px;">현재잔액</label>
                    <div class="col-sm-4">
                     <p style="margin-left: 2px; font-weight: bold; font-size: large; display: inline;">0</p> 
                     <p style="display: inline;">KRW</p>
@@ -53,7 +53,7 @@
             <div class="col-xs-12" style="float: left; margin: 10px 0px;">
               <fieldset>
                 <div class="form-group">
-                   <label for="input-id-1" class="col-sm-1 control-label">예금주</label>
+                   <label for="input-id-1" class="col-sm-1 control-label" style="line-height: 35px;">예금주</label>
                    <div class="col-sm-4">
                       <input id="input-id-1" type="text" class="form-control">
                    </div>
@@ -65,7 +65,7 @@
                
               <fieldset class="last-child">
                 <div class="form-group">
-                   <label class="col-sm-1 control-label">예금주 은행</label>
+                   <label class="col-sm-1 control-label" style="line-height: 35px;">예금주 은행</label>
                    <div class="col-sm-4">
                       <select name="account" class="form-control m-b">
                          <option>카카오뱅크</option>
@@ -84,7 +84,7 @@
             <div class="col-xs-12">
               <fieldset class="last-child">
                 <div class="form-group">
-                   <label class="col-sm-1 control-label">크레딧 선택</label>
+                   <label class="col-sm-1 control-label" style="line-height: 35px;">크레딧 선택</label>
                    <div class="col-sm-4">
                       <select name="account" class="form-control m-b">
                          <option>5000KRW</option>
