--- a/views/supportAdd.html
+++ b/views/supportAdd.html
@@ -52,7 +52,7 @@
                 <hr> 
                 <fieldset>
                     <div class="form-group">
-                       <label for="input-id-1" class="col-sm-1 control-label">제목</label>
+                       <label for="input-id-1" class="col-sm-1 control-label" style="line-height: 35px;">제목</label>
                        <div class="col-sm-10">
                           <input id="input-id-1" type="text" class="form-control">
                        </div>
@@ -60,12 +60,12 @@
                  </fieldset>
                  <fieldset style="border-bottom: none;">
                     <div class="form-group">
-                       <label for="input-id-1" class="col-sm-1 control-label">글쓴이</label>
+                       <label for="input-id-1" class="col-sm-1 control-label" style="line-height: 35px;">글쓴이</label>
                        <div class="col-sm-3">
                           <input id="input-id-1" type="text" class="form-control">
                        </div>
                        <div class="col-sm-3"></div>
-                       <label for="input-id-1" class="col-sm-1 control-label">비밀번호</label>
+                       <label for="input-id-1" class="col-sm-1 control-label" style="line-height: 35px;">비밀번호</label>
                        <div class="col-sm-3">
                           <input id="input-id-1" type="text" class="form-control">
                        </div>
