메인뷰, 클라우드 대시보드, 키페어, 방화벽까지 일단 프론트 연동완료, 방화벽 수정뷰 구현예정

--- a/app/project/static/templates/_left-side.html
+++ b/app/project/static/templates/_left-side.html
@@ -13,18 +13,18 @@
              <!-- START SubMenu item-->
              <ul class="nav collapse in">
                 <li>
-                   <a href="dashboard.html" title="Landing" data-toggle="" class="no-submenu">
-                      <span class="item-text">대시보드</span>
+                   <a href="/cloud/list" title="Landing" data-toggle="" class="no-submenu">
+                      <span class="item-text">클라우드 대시보드</span>
                    </a>
                 </li>
                 <li>
-                  <a href="priceview.html" title="priceview" data-toggle="" class="no-submenu">
-                     <span class="item-text">PriceView</span>
+                  <a href="/keypair/list" title="priceview" data-toggle="" class="no-submenu">
+                     <span class="item-text">키페어 관리</span>
                   </a>
                </li>
                <li>
-                  <a href="security_group.html"  title="security_group" data-toggle="" class="no-submenu">
-                     <span class="item-text">security_group</span>
+                  <a href="/secgroup/list"  title="security_group" data-toggle="" class="no-submenu">
+                     <span class="item-text">방화벽 관리</span>
                   </a>
                </li>
                <li>
