--- a/app/project/static/templates/_menu.html
+++ b/app/project/static/templates/_menu.html
@@ -2,12 +2,12 @@
 <nav role="navigation" class="navbar navbar-default navbar-top navbar-fixed-top">
     <!-- START navbar header-->
     <div class="navbar-header">
-      <a href="pages/landing_ori.html" class="navbar-brand">
+      <a href="/" class="navbar-brand">
          <div class="brand-logo">
-            <img src="/app/img/logo.png" alt="App Logo" class="img-responsive">
+            <img src="/static/app/img/logo.png" alt="App Logo" class="img-responsive">
          </div>
          <div class="brand-logo-collapsed">
-            <img src="/app/img/logo-single.png" alt="App Logo" class="img-responsive">
+            <img src="/static/app/img/logo-single.png" alt="App Logo" class="img-responsive">
          </div>
       </a>
     </div>
