--- a/app/project/static/app/css/views/cloud/add.css
+++ b/app/project/static/app/css/views/cloud/add.css
@@ -48,9 +48,12 @@
       border-radius: 10px;
       border: none;
    }
-   .box-placeholder:hover {
+   .box-placeholder:hover{
       box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
       background-color: #31ba850e;
+   }
+   .box-placeholder.selected {
+      background-color: #17cc864a;
    }
 
    #nonebox {
@@ -60,5 +63,6 @@
       background-color:white;
       box-shadow: none;
    }
+
 
 
