--- a/app/project/static/templates/_head.html
+++ b/app/project/static/templates/_head.html
@@ -8,11 +8,20 @@
    
 <link rel="stylesheet" href="/static/app/css/bootstrap.css">
 <!-- Vendor CSS-->
-<link rel="stylesheet" href="/static/vendor/fontawesome/css/font-awesome.min.css">
-<link rel="stylesheet" href="/static/vendor/animo/animate+animo.css">
+<link rel="stylesheet" href="/static/vendor/fontawesome/css/font-awesome.min.css"><link rel="stylesheet" href="/static/vendor/animo/animate+animo.css">
 <link rel="stylesheet" href="/static/vendor/csspinner/csspinner.min.css">
 <!-- START Page Custom CSS-->
 <!-- END Page Custom CSS-->
 <!-- App CSS-->
+
+
+<link rel="stylesheet" href="/static/vendor/slider/css/slider.css">
+<link rel="stylesheet" href="/static/vendor/chosen/chosen.min.css">
+<link rel="stylesheet" href="/static/vendor/datetimepicker/css/bootstrap-datetimepicker.min.css">
+<!-- Codemirror -->
+<link rel="stylesheet" href="/static/vendor/codemirror/lib/codemirror.css">
+<!-- Bootstrap tags-->
+<link rel="stylesheet" href="/static/vendor/tagsinput/bootstrap-tagsinput.css">
+
 <link rel="stylesheet" href="/static/app/css/app.css"> 
 <link rel= "stylesheet" href = "/static/app/css/global.css"> 
