--- a/app/project/templates/cloud/list.html
+++ b/app/project/templates/cloud/list.html
@@ -27,6 +27,7 @@
                <br>
                <small>클라우드 리스트</small>
             </h3>
+            {% include "_notifier.html" %}
             <!-- START row-->
             <div class="row">
                <div class="col-lg-12">
