방화벽, 키페어, 왼쪽 매뉴 탬플릿 라우팅 연결

--- a/app/project/static/templates/_menu.html
+++ b/app/project/static/templates/_menu.html
@@ -40,9 +40,9 @@
                <em class="fa fa-user" style="margin-right: 10px;"></em><em class="fa fa-angle-down"></em>
             </a>
             <ul class="dropdown-menu">
-               <li><a class="router" href="../pages/login.html">Login</a>
+               <li><a class="router" href="/user_profile">User profile</a>
                </li>
-               <li><a class="router" href="../views/setting.html">Settings</a>
+               <li><a class="router" href="/logout">Logout</a>
                </li>
             </ul>
          </li> 
