--- a/app/project/templates/keypair/list.html
+++ b/app/project/templates/keypair/list.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!--[if lt IE 7]> <html class="ie ie6 lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="ie ie7 lt-ie9 lt-ie8"        lang="en"> <![endif]-->
@@ -26,6 +27,7 @@
                <br>
                <small>키페어 리스트</small>
             </h3>
+            {% include "_notifier.html" %}
             <!-- START row-->
             <div class="row">
                <div class="col-lg-12">
@@ -69,9 +71,7 @@
             <!-- END row-->
             <div class="container">
                <a href="{{ url_for('keypair.add') }}">add a new keypair</a>.</p>
-            </div>
-            
-
+            </div> 
          </div>
       </section> 
    </div> 
@@ -79,3 +79,5 @@
 </body>
 
 </html>
+
+ 
