--- a/app/project/templates/secgroup/list.html
+++ b/app/project/templates/secgroup/list.html
@@ -21,6 +21,7 @@
    <!-- START Main wrapper-->
    <div id="wrapper" class="wrapper">
       <section id="content-area">
+         {% include "_notifier.html" %}
          <div class="main-content">
             <h3>방화벽
                <br>
