--- a/app/project/static/templates/_left-side.html
+++ b/app/project/static/templates/_left-side.html
@@ -5,36 +5,50 @@
           <!-- START Menu-->
           <!-- <li class="nav-heading">Main</li>
            -->
-          <li class="active">
-             <a href="#" title="Pages" data-toggle="collapse-next" class="has-submenu">
-                <em class="fa fa-file-text-o"></em>
-                <span class="item-text">Pages</span>
-             </a>
-             <!-- START SubMenu item-->
-             <ul class="nav collapse in">
-                <li>
-                   <a href="/cloud/list" title="Landing" data-toggle="" class="no-submenu">
-                      <span class="item-text">클라우드 대시보드</span>
-                   </a>
-                </li>
-                <li>
-                  <a href="/keypair/list" title="priceview" data-toggle="" class="no-submenu">
-                     <span class="item-text">키페어 관리</span>
-                  </a>
-               </li>
-               <li>
-                  <a href="/secgroup/list"  title="security_group" data-toggle="" class="no-submenu">
-                     <span class="item-text">방화벽 관리</span>
-                  </a>
-               </li>
-               <li>
-                  
-               
-               
-                
-             </ul>
-             <!-- END SubMenu item-->
-          </li>
+                  <li class="active">
+                     <a href="#" title="Cloud" data-toggle="collapse-next" class="has-submenu">
+                        <em class="fa fa-file-text-o"></em>
+                        <span class="item-text">클라우드</span>
+                     </a>
+                     <!-- START SubMenu item-->
+                     <ul class="nav collapse in">
+                        <li>
+                           <a href="/cloud/list" title="Landing" data-toggle="" class="no-submenu">
+                              <span class="item-text">클라우드 대시보드</span>
+                           </a>
+                        </li>
+                        <li>
+                          <a href="/keypair/list" title="priceview" data-toggle="" class="no-submenu">
+                             <span class="item-text">키페어 관리</span>
+                          </a>
+                       </li>
+                       <li>
+                          <a href="/secgroup/list"  title="security_group" data-toggle="" class="no-submenu">
+                             <span class="item-text">방화벽 관리</span>
+                          </a>
+                       </li>
+                        
+                     </ul> 
+                  </li>
+                  <li >
+                     <a href="#" title="others" data-toggle="collapse-next" class="has-submenu">
+                        <em class="fa fa-file-text-o"></em>
+                        <span class="item-text">기타</span>
+                     </a>
+                     <!-- START SubMenu item-->
+                     <ul class="nav collapse in">
+                       <li>
+                          <a href="/support/list"  title="security_group" data-toggle="" class="no-submenu">
+                             <span class="item-text">지원 센터</span>
+                          </a>
+                       </li>
+                       <li>
+                          <a href="/billing/me"  title="security_group" data-toggle="" class="no-submenu">
+                             <span class="item-text">요금 관리</span>
+                          </a>
+                       </li> 
+                     </ul> 
+                  </li>
           
              </ul>
              <!-- END SubMenu item-->
