notifier col-md-12 style 변경

--- a/app/project/templates/_notifier.html
+++ b/app/project/templates/_notifier.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container col-md-12">
       {% for primary_message in get_flashed_messages(category_filter=["primary"]) %}
       <div class="alert alert-primary alert-dismissible " role="alert">
         {{ primary_message }}
